feat:add new code

--- a/static/base.css
+++ b/static/base.css
@@ -100,3 +100,13 @@ ul{
     font-size: 15px;
 }
 
+ @media only screen and (max-width : 600px){
+
+        
+        
+        
+    }
+ 
+    
+ 
+
